# Gallery-Journey

./: .gitignore  README.md
GalleryJourney/: CMakeLists.txt  unitTests.cpp
GalleryJourney/mainLauncher/: CMakeLists.txt
GalleryJourney/src/: myMain.cpp  myMain.h
GalleryJourney/unitTests/: CMakeLists.txt
JourneyGalleryGame/: CMakeLists.txt  CMakeLists.txt.in  CMakeLists_tmxlite.txt.in  README.txt  unitTests.cpp
JourneyGalleryGame/imgui_lib/: CMakeLists.txt  imconfig.h  imgui.cpp
JourneyGalleryGame/mainLauncher/: CMakeLists.txt  mainLauncher.cpp
JourneyGalleryGame/resources/xml_files/: inventory.xml  level0.xml  level1.xml  level10.xml  level11.xml  level2.xml  level3.xml  level3bis.xml  level4.xml  level5.xml  level6.xml  level7.xml  level8.xml  level9.xml
JourneyGalleryGame/src/: ArduinoHandle.cpp  ArduinoHandle.h  CMakeLists.txt  Case.cpp  Case.h  Door.cpp  Door.h  Equipment.cpp  Equipment.h  Excavation.cpp  Excavation.h  Game.cpp  Game.h  GameAssets.cpp  GameAssets.h  InteractableObject.cpp  InteractableObject.h  Inventory.cpp  Inventory.h  Material.cpp  Material.h  MyContactListener.cpp  MyContactListener.h  Object.cpp  Object.h  Player.cpp  Player.h  SFMLOrthogonalLayer.h  Skeleton.cpp  Skeleton.h  Table.cpp  Table.h  UnlockableElement.cpp  UnlockableElement.h  Wall.cpp  Wall.h  WallPiece.cpp  WallPiece.h  myMain.cpp
